fix login modal width on mobile device, e.g: nexus 5

--- a/app/assets/stylesheets/components/modals.css.scss
+++ b/app/assets/stylesheets/components/modals.css.scss
@@ -8,7 +8,8 @@
   }
 
   .modal-dialog {
-    width: 300px;
+    max-width: 340px;
+    width: 94%;
 
     .entry {
       margin-bottom: 0;
